Fixed graph overflow from new styling

--- a/static/styles/mealplan.css
+++ b/static/styles/mealplan.css
@@ -1,7 +1,6 @@
 .box { 
     border: 4px solid #006747; 
     height: 100%;
-    max-height: 460px;
   }
   
   .is-flex-centered{
